--- a/index.html
+++ b/index.html
@@ -3,38 +3,50 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Portfolio</title>
+    <title>My resume</title>
   </head>
   <body>
-    <h1>Minh Man's Portfolio</h1>
-    <h2>I'm a Web developer</h2>
+    <h1>Summary</h1>
+    <p>Self-taught Web Development programmer / Data Analyst</p>
+    <img src="./IMG_3422.JPG" width="250" alt="My profile photo" />
     <hr />
-    <h2>
-      <a
-        href="public/movie ranking.html"
-        >Movie Ranking Project</a
-      >
-    </h2>
-    <img
-      src="assets/images/Screenshot 2024-07-08 193442.png"
-      alt="Movie Project"
-      height="200"
-    />
-    <h2>
-      <a
-        href="public/birthday project.html"
-        >Birthday Invitation Project</a
-      >
-    </h2>
-    <img
-      src="assets/images/Screenshot 2024-07-08 193630.png"
-      alt="Birthday Project"
-      height="200"
-    />
+    <h2>Education</h2>
+    <p>University of Economics Ho Chi Minh City</p>
+    <h2>Work Experience</h2>
+    <ol>
+      <li>Ecommerce Key Account Intern: Bosch Viet Nam Co., Ltd <br />2019</li>
+      <li>
+        Business Development Associate: Shopee Co., Ltd <br />
+        08.2021 - 08.2024
+      </li>
+    </ol>
+    <h2>Skills</h2>
+    <ol>
+      <li>
+        Python
+        <ul>
+          <li>Data cleaning, data visualisation</li>
+          <li>Web Development</li>
+        </ul>
+      </li>
+      <li>
+        HTML <br />
+        <ul>
+          <li>Basic web page layout</li>
+        </ul>
+      </li>
+    </ol>
+    <h2>Certification</h2>
+    <ol>
+      <li>Certification 1</li>
+      <li>Certification 2</li>
+      <li>Certification 3</li>
+      <li>Certification 4</li>
+      <li>Certification 5</li>
+      <li>Certification 6</li>
+    </ol>
     <hr />
-    <h2>
-      <a href="public/about.html">About Me</a>
-      <a href="public/contact.html"> Contact Me</a>
-    </h2>
+    <a href="https://www.linkedin.com/in/manvuminh/"> My LinkedIn</a>
+    <footer><p>Made by Vu Minh Man.  All Rights Reserved.</p></footer>
   </body>
 </html>
