--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <hr />
     <h2>Education</h2>
     <p>University of Economics Ho Chi Minh City</p>
+    <hr />
     <h2>Work Experience</h2>
     <ol>
       <li>Ecommerce Key Account Intern: Bosch Viet Nam Co., Ltd <br />2019</li>
@@ -20,6 +21,7 @@
         08.2021 - 08.2024
       </li>
     </ol>
+    <hr />
     <h2>Skills</h2>
     <ol>
       <li>
@@ -36,6 +38,7 @@
         </ul>
       </li>
     </ol>
+    <hr />
     <h2>Certification</h2>
     <ol>
       <li>Certification 1</li>
@@ -46,7 +49,9 @@
       <li>Certification 6</li>
     </ol>
     <hr />
+    <h2>Connect with me</h2>
     <a href="https://www.linkedin.com/in/manvuminh/"> My LinkedIn</a>
-    <footer><p>Made by Vu Minh Man.  All Rights Reserved.</p></footer>
+    <hr />
+    <footer><p>© Vu Minh Man. All Rights Reserved.</p></footer>
   </body>
 </html>
